objects/nFORCE__Workflow_Step__c.object
<CustomObject>
    <description>This junction object indicates which steps the system should run in a workflow and the order in which order the steps run.</description>
    <fields>
        <fullName>nFORCE__Order__c</fullName>
        <description>The user manually populates this number field to indicate the order in which the step runs in the workflow. The number must be a whole number.</description>
        <inlineHelpText>This field indicates the number order of a workflow. Enter the whole number to indicate when the step runs in the workflow.</inlineHelpText>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Step__c</fullName>
        <description>The user manually populates this master-detail relationship field to associate the individual step with a workflow. By default this field is blank.</description>
        <inlineHelpText>Enter the name of the step you want to associate with the workflow.</inlineHelpText>
        <label>Step</label>
        <referenceTo>nFORCE__Step__c</referenceTo>
        <relationshipLabel>Workflow Steps</relationshipLabel>
        <relationshipName>Workflow_Steps</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nFORCE__Workflow__c</fullName>
        <description>The user manually populates this master-detail relationship field to indicate the step&apos;s corresponding workflow. By default, this field is blank.</description>
        <inlineHelpText>Enter the name of the workflow you want to associate with the step.</inlineHelpText>
        <label>Workflow</label>
        <referenceTo>nFORCE__Workflow__c</referenceTo>
        <relationshipLabel>Workflow Steps</relationshipLabel>
        <relationshipName>Workflow_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>The system automatically populates this lookup field with the External ID for the workflow step object.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>This field contains the External ID of the workflow step object associated with the record.</inlineHelpText>
        <label>Lookup Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Workflow Step</label>
    <listViews>
        <fullName>nFORCE__All_Workflow_Steps</fullName>
        <columns>NAME</columns>
        <columns>nFORCE__Workflow__c</columns>
        <columns>nFORCE__Step__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Workflow Steps</label>
    </listViews>
    <nameField>
        <displayFormat>WS-{00000000}</displayFormat>
        <label>Workflow Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workflow Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>